Refactoring and migration from Java 8 to Java 11